--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -77,7 +77,7 @@
         android:layout_marginStart="@dimen/choice_button_width"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/choice_button_width"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +127,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
-        android:text="Open market est votre nouveaux partenaire en affaires , vendez partout au cameroun,sans frais.Inscrivez vous ,c'est simple et rapide."
+        android:text="Open market est votre nouveaux partenaire en affaires , vendez partout aux cameroun,sans frais.Inscrivez vous ,c'est simple et rapide."
         android:textAlignment="center"
         android:textColor="@color/blanc"
         android:textSize="@dimen/new_detail_desc_text_size"
