--- a/CommunityMarket/app/src/main/res/values-large/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-large/dimens.xml
@@ -228,6 +228,8 @@
     <dimen name="splash_progress_top">530dp</dimen>
     <dimen name="splash_text_proverb">18sp</dimen>
     <dimen name="splash_text_logo_name">30sp</dimen>
+    <dimen name="message_activity_height_image">210dp</dimen>
+    <dimen name="message_image">200dp</dimen>
 
 
 
