--- a/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -229,5 +229,7 @@
     <dimen name="splash_text_proverb">14sp</dimen>
     <dimen name="splash_text_logo_name">24sp</dimen>
 
+    <dimen name="message_activity_height_image">100dp</dimen>
+    <dimen name="message_image">100dp</dimen>
 
 </resources>
