--- a/CommunityMarket/app/src/main/res/layout/activity_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_message.xml
@@ -81,6 +81,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
+                    android:theme="@style/ToolbarTheme"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -171,8 +172,8 @@
 
             <ImageView
                 android:id="@+id/image_de_discutions"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="@dimen/message_image"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -182,12 +183,15 @@
                 android:id="@+id/titre_produit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/message_activity_text_start"
+                android:layout_marginStart="@dimen/pub_button_start_end"
                 android:layout_marginTop="@dimen/message_image_top"
                 android:textColor="@color/blanc"
                 android:textStyle="bold"
                 android:lines="1"
+                android:textSize="@dimen/detail_text_size"
                 android:ellipsize="end"
+                android:theme="@style/ToolbarTheme"
+
                 app:layout_constraintStart_toEndOf="@+id/image_de_discutions"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -195,11 +199,12 @@
                 android:id="@+id/prix_produit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/message_activity_text_start"
+                android:layout_marginStart="@dimen/pub_button_start_end"
                 android:layout_marginTop="@dimen/message_activity_prix_top"
                 android:textColor="@color/bg_screen1"
                 android:textStyle="bold"
-                android:textSize="@dimen/message_text_size"
+                android:textSize="@dimen/detail_text_size"
+                android:theme="@style/ToolbarTheme"
                 app:layout_constraintStart_toEndOf="@+id/image_de_discutions"
                 app:layout_constraintTop_toBottomOf="@+id/titre_produit" />
 
@@ -216,7 +221,7 @@
                 <ImageView
                     android:id="@+id/image_de_fond"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:scaleType="centerCrop" />
 
             </LinearLayout>
