--- a/CommunityMarket/app/src/main/res/layout/activity_vente_utilisateur.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_vente_utilisateur.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         app:titleTextColor="@color/black"
         android:elevation="8dp"
+        android:theme="@style/AppTheme.AppBarOverlay_two"
         android:background="@color/blanc"></android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
