--- a/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
@@ -39,7 +39,6 @@
                     android:layout_height="@dimen/item_principal_image_dim_height_with"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="92dp"
-                    android:src="@drawable/boy"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,10 +50,10 @@
                     android:layout_marginTop="@dimen/principal_top"
                     android:layout_marginEnd="8dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="xxxxxx"
                     android:textColor="@color/black"
                     android:textSize="@dimen/item_principal_name"
                     android:textStyle="bold"
+                    android:theme="@style/ToolbarTheme"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/postImageUtilisateur"
@@ -66,7 +65,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/principal_start"
                     android:layout_marginEnd="@dimen/principal_end"
-                    android:text="xxxxx"
                     android:textSize="@dimen/item_principal_date"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -81,9 +79,8 @@
                     android:layout_marginTop="12dp"
                     android:ellipsize="end"
                     android:lines="3"
-                    android:textSize="@dimen/item_principal_desc"
-                    android:text="k;suvbiuvbere vehv erk lekrherlkjhv evberkhv elrhv erhbvlerjh"
                     android:textColor="@color/black"
+                    android:textSize="@dimen/item_principal_desc"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.098"
                     app:layout_constraintStart_toEndOf="@+id/postImage"
@@ -98,7 +95,6 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="xxxxxxx"
                     android:textColor="@color/orange"
                     android:textSize="@dimen/item_principal_prix"
                     android:textStyle="bold"
@@ -121,6 +117,17 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/postImage" />
+
+                <ProgressBar
+                    android:id="@+id/principal_progress"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="@dimen/nvx_item_nvx_like_image"
+                    android:layout_height="@dimen/nvx_item_nvx_like_image"
+                    android:theme="@style/progress_theme"
+                    app:layout_constraintBottom_toBottomOf="@+id/postImageUtilisateur"
+                    app:layout_constraintEnd_toEndOf="@+id/postImageUtilisateur"
+                    app:layout_constraintStart_toStartOf="@+id/postImageUtilisateur"
+                    app:layout_constraintTop_toTopOf="@+id/postImageUtilisateur" />
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
