--- a/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
@@ -44,7 +44,6 @@
                     android:layout_marginEnd="16dp"
                     android:ellipsize="end"
                     android:lines="3"
-                    android:text="xxxxxxxxxx xxx"
                     android:textColor="@color/black"
                     android:textSize="@dimen/nvx_item_nvx_desc"
                     app:fontFamily="sans-serif-condensed"
@@ -74,10 +73,10 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="16dp"
-                    android:text="xxxxx"
                     android:textColor="@color/black"
                     android:textSize="@dimen/nvx_item_nvx_name"
                     android:textStyle="bold"
+                    android:theme="@style/ToolbarTheme"
                     app:fontFamily="sans-serif-condensed"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +89,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="xxxxxx"
                     android:textSize="@dimen/nvx_item_nvx_date"
                     app:fontFamily="sans-serif-condensed"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -138,7 +136,6 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="12dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="xxxxxx"
                     android:textColor="@color/orange"
                     android:textSize="14sp"
                     android:textStyle="bold"
@@ -156,7 +153,6 @@
                     android:ellipsize="end"
                     android:fontFamily="sans-serif-condensed"
                     android:lines="1"
-                    android:text="xxxxxx"
                     android:textColor="@color/black"
                     android:textSize="@dimen/nvx_item_nvx_titre"
                     android:textStyle="bold"
@@ -179,37 +175,19 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="1.0" />
 
+                <ProgressBar
+                    android:id="@+id/nouveaux_progress"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="@dimen/nvx_item_nvx_like_image"
+                    android:layout_height="@dimen/nvx_item_nvx_like_image"
+                    android:theme="@style/progress_theme"
+                    app:layout_constraintBottom_toBottomOf="@+id/nouveaux_image_profile"
+                    app:layout_constraintEnd_toEndOf="@+id/nouveaux_image_profile"
+                    app:layout_constraintStart_toStartOf="@+id/nouveaux_image_profile"
+                    app:layout_constraintTop_toBottomOf="@+id/nouveaux_tire" />
+
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
-
-        <!--  <ImageView
-            android:id="@+id/item_categories_image"
-            android:layout_width="0dp"
-            android:layout_height="145dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintCircleRadius="20dp"/>
-
-        <TextView
-            android:id="@+id/item_text_categories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="marques"
-            android:textColor="@color/orange"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:fontFamily="sans-serif-condensed"
-            app:layout_constraintBottom_toBottomOf="@+id/item_categories_image"
-            app:layout_constraintEnd_toEndOf="@+id/item_categories_image"
-            app:layout_constraintHorizontal_bias="0.482"
-            app:layout_constraintStart_toStartOf="@+id/item_categories_image"
-            app:layout_constraintTop_toTopOf="@+id/item_categories_image"
-            app:layout_constraintVertical_bias="0.888" /> -->
-
-
     </android.support.constraint.ConstraintLayout>
 
 
