--- a/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
@@ -95,6 +95,7 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
+                android:theme="@style/ToolbarTheme"
                 android:id="@+id/nom_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
