--- a/CommunityMarket/app/src/main/res/layout/nav_header_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/nav_header_accueil.xml
@@ -32,6 +32,7 @@
           app:layout_constraintTop_toTopOf="parent" />
 
       <TextView
+          android:theme="@style/ToolbarTheme"
           android:id="@+id/drawer_user_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
