--- a/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.5"
+        android:alpha="0.6"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +31,7 @@
         tools:ignore="Orientation"></LinearLayout>
 
     <TextView
+        android:theme="@style/ToolbarTheme"
         android:id="@+id/textView5"
         android:layout_width="@dimen/text_choice_widht"
         android:layout_height="wrap_content"
