--- a/CommunityMarket/app/src/main/res/layout/welcome_side2.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side2.xml
@@ -21,7 +21,7 @@
 
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.5"
+        android:alpha="0.8"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,6 +32,7 @@
         tools:ignore="Orientation"></LinearLayout>
 
     <TextView
+        android:theme="@style/ToolbarTheme"
         android:id="@+id/textView5"
         android:layout_width="@dimen/desc_widh"
         android:layout_height="wrap_content"
