--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -96,7 +96,7 @@
     <!-- general activty  -->
     <dimen name="general_image_w_n_h">120dp</dimen>
     <dimen name="general_image_top">56dp</dimen>
-    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="app_bar_height">600dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
@@ -155,7 +155,7 @@
     <dimen name="new_button_add_button_end">32dp</dimen>
     <dimen name="new_detail_supp_butt_widht">55dp</dimen>
     <dimen name="new_detail_supp_button_size_text">24sp</dimen>
-    <dimen name="new_desc_text_width">1000dp</dimen>
+    <dimen name="new_desc_text_width">700dp</dimen>
     <dimen name="new_detail_user_actual">32dp</dimen>
     <dimen name="new_detail_top_actual_user">24dp</dimen>
     <dimen name="new_detail_edit_start">16dp</dimen>
@@ -238,6 +238,8 @@
     <dimen name="splash_progress_top">400dp</dimen>
     <dimen name="splash_text_proverb">20sp</dimen>
     <dimen name="splash_text_logo_name">30sp</dimen>
+    <dimen name="message_activity_height_image">230dp</dimen>
+    <dimen name="message_image">210dp</dimen>
 
 
 </resources>
