--- a/CommunityMarket/app/src/main/res/values/styles.xml
+++ b/CommunityMarket/app/src/main/res/values/styles.xml
@@ -8,7 +8,6 @@
         <item name="colorAccent">@color/blanc</item>
     </style>
     <style name="AppTheme.AppBarOverlay_two" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
-    <item name="android:fontFamily">@font/pacifico</item>
 </style>
 <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="slash" parent="Theme.AppCompat.Light.NoActionBar">
@@ -24,9 +23,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
     </style>
-    <style name="ToolbarThemeTwo" parent="ThemeOverlay.AppCompat.Light">
+    <style name="ToolbarTheme_two" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/pacifico</item>
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_arrow_black</item>
+    </style>
+    <style name="ToolbarThemeTwo" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:fontFamily">@font/pacifico</item>
+        <item name="colorPrimary">@color/blanc</item>
     </style>
     <style name="progress_theme" parent="ThemeOverlay.AppCompat.Light">
         <item name="colorAccent">@color/black</item>
