--- a/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_user_general_presentation.xml
@@ -59,7 +59,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/new_profil_user_name_top"
-                        android:text="ndeme yvan"
                         android:textColor="@color/orange"
                         android:textSize="@dimen/new_profil_name_text_size"
                         android:textStyle="bold"
@@ -87,8 +86,9 @@
                     <ProgressBar
                         android:id="@+id/user_general_progress"
                         style="?android:attr/progressBarStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/nvx_item_nvx_like_image"
+                        android:layout_height="@dimen/nvx_item_nvx_like_image"
+                        android:theme="@style/progress_theme"
                         android:layout_marginBottom="8dp"
                         android:visibility="invisible"
                         app:layout_constraintBottom_toBottomOf="@+id/generalImageProfilUser"
