--- a/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
@@ -90,7 +90,7 @@
                     android:id="@+id/postUser_prix"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/principal_start"
+                    android:layout_marginStart="4dp"
                     android:layout_marginTop="@dimen/principal_prix_top"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
@@ -100,15 +100,16 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/textView20"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/text_prix"
                     app:layout_constraintTop_toBottomOf="@+id/post_user_description"
                     app:layout_constraintVertical_bias="1.0" />
 
                 <TextView
-                    android:id="@+id/textView20"
+                    android:id="@+id/text_prix"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="sans-serif-condensed"
                     android:text="@string/item_general"
@@ -128,6 +129,29 @@
                     app:layout_constraintEnd_toEndOf="@+id/postImageUtilisateur"
                     app:layout_constraintStart_toStartOf="@+id/postImageUtilisateur"
                     app:layout_constraintTop_toTopOf="@+id/postImageUtilisateur" />
+
+                <ImageView
+                    android:id="@+id/image_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/postUser_prix"
+                    app:layout_constraintStart_toEndOf="@+id/postUser_prix"
+                    app:layout_constraintTop_toTopOf="@+id/postUser_prix"
+                    app:srcCompat="@drawable/ic_add_coment" />
+
+                <TextView
+                    android:id="@+id/comment_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/image_comment"
+                    app:layout_constraintStart_toEndOf="@+id/image_comment"
+                    app:layout_constraintTop_toTopOf="@+id/image_comment" />
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
