--- a/CommunityMarket/app/src/main/res/layout/activity_splash.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_splash.xml
@@ -56,8 +56,8 @@
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/nvx_item_nvx_like_image"
+        android:layout_height="@dimen/nvx_item_nvx_like_image"
         android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/splash_progress_top"
         android:layout_marginEnd="8dp"
