--- a/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
@@ -76,6 +76,7 @@
                 android:layout_marginEnd="24dp"
                 android:ellipsize="end"
                 android:lines="3"
+                android:text="kdflekfief jnrkg "
                 android:textColor="@color/black"
                 android:textSize="@dimen/item_principal_desc"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,20 +88,20 @@
                 android:id="@+id/prix_postl_vendeur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 android:fontFamily="sans-serif-condensed"
-                android:text="5000 fcfa "
                 android:textColor="@color/orange"
                 android:textSize="@dimen/item_principal_prix"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/textView20"
-                app:layout_constraintStart_toEndOf="@+id/textView20"
-                app:layout_constraintTop_toTopOf="@+id/textView20" />
+                app:layout_constraintBottom_toBottomOf="@+id/text_prix"
+                app:layout_constraintStart_toEndOf="@+id/text_prix"
+                app:layout_constraintTop_toTopOf="@+id/text_prix" />
 
             <TextView
-                android:id="@+id/textView20"
+                android:id="@+id/text_prix"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/item_general"
@@ -121,109 +122,31 @@
                 app:layout_constraintStart_toStartOf="@+id/profil_vendeur"
                 app:layout_constraintTop_toTopOf="@+id/profil_vendeur" />
 
+            <ImageView
+                android:id="@+id/image_comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/prix_postl_vendeur"
+                app:layout_constraintStart_toEndOf="@+id/prix_postl_vendeur"
+                app:layout_constraintTop_toTopOf="@+id/prix_postl_vendeur"
+                app:srcCompat="@drawable/ic_add_coment" />
+
+            <TextView
+                android:id="@+id/comment_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/image_comment"
+                app:layout_constraintStart_toEndOf="@+id/image_comment"
+                app:layout_constraintTop_toTopOf="@+id/image_comment" />
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
-    <!-- <android.support.v7.widget.CardView
-         android:id="@+id/profil_container"
-         android:layout_width="0dp"
-         android:layout_height="@dimen/item_card_height"
-         android:elevation="7dp"
-         app:cardCornerRadius="2dp"
-         app:layout_constraintBottom_toBottomOf="parent"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toTopOf="parent">
 
-         <android.support.constraint.ConstraintLayout
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-
-             <TextView
-                 android:id="@+id/post_titre_produit_description"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginStart="@dimen/item_vendeur_start"
-                 android:layout_marginTop="@dimen/item_text_top"
-                 android:layout_marginEnd="18dp"
-                 android:ellipsize="end"
-                 android:fontFamily="sans-serif-condensed"
-                 android:lines="1"
-                 android:text="jvkur vjfnuv "
-                 android:textColor="@color/black"
-                 android:textSize="@dimen/post_item_desc"
-                 android:textStyle="bold"
-                 app:layout_constraintEnd_toStartOf="@+id/profil_vendeur"
-                 app:layout_constraintHorizontal_bias="0.0"
-                 app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/post_image_vendeur" />
-
-             <ImageView
-                 android:id="@+id/profil_vendeur"
-                 android:layout_width="@dimen/post_item_image"
-                 android:layout_height="@dimen/post_item_image"
-                android:layout_marginEnd="@dimen/item_vendeur_start"
-                 android:layout_marginTop="@dimen/item_profil_margin_top"
-                 android:visibility="visible"
-                 app:layout_constraintBottom_toBottomOf="@+id/post_titre_produit_description"
-                 app:layout_constraintEnd_toEndOf="parent"
-                 app:layout_constraintTop_toTopOf="@+id/post_titre_produit_description"
-                 tools:ignore="MissingConstraints" />
-
-             <TextView
-                 android:id="@+id/prix_postl_vendeur"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginStart="@dimen/item_vendeur_start"
-                 android:layout_marginTop="8dp"
-                 android:ellipsize="end"
-                 android:fontFamily="sans-serif-condensed"
-                 android:lines="1"
-                 android:text="1000"
-                 android:textColor="@color/orange"
-                 android:textSize="@dimen/post_item_desc"
-                 android:textStyle="bold"
-                 app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toBottomOf="@+id/post_titre_produit_description" />
-
-             <ImageView
-                 android:id="@+id/post_image_vendeur"
-                 android:layout_width="match_parent"
-                 android:layout_height="@dimen/height_item_vendeur"
-                 android:scaleType="centerCrop"
-                 android:src="@drawable/t_shirt"
-                 app:layout_constraintEnd_toEndOf="parent"
-                 app:layout_constraintStart_toStartOf="parent"
-                 app:layout_constraintTop_toTopOf="parent" />
-
-             <TextView
-                 android:id="@+id/catrogies_name_vendeur"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginStart="8dp"
-                 android:layout_marginEnd="8dp"
-                 android:text="TextView"
-                 android:visibility="invisible"
-                 app:layout_constraintBottom_toBottomOf="@+id/post_image_vendeur"
-                 app:layout_constraintEnd_toEndOf="parent"
-                 app:layout_constraintHorizontal_bias="0.034"
-                 app:layout_constraintStart_toStartOf="parent" />
-
-             <TextView
-                 android:theme="@style/ToolbarTheme"
-                 android:id="@+id/nom_user"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginStart="8dp"
-                 android:layout_marginEnd="8dp"
-                 android:layout_marginBottom="20dp"
-                 android:textColor="@color/black"
-                 android:textSize="14sp"
-                 android:textStyle="bold"
-                 android:visibility="invisible"
-                 app:layout_constraintBottom_toBottomOf="parent"
-                 app:layout_constraintEnd_toEndOf="parent"
-                 app:layout_constraintHorizontal_bias="0.812"
-                 app:layout_constraintStart_toStartOf="parent" /> -->
 </android.support.constraint.ConstraintLayout>
