--- a/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
@@ -91,10 +91,12 @@
 
                 <ImageView
                     android:id="@+id/detail_image_du_profil"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="376dp"
+                    android:layout_width="@dimen/detail_image_height_width"
+                    android:layout_height="@dimen/detail_image_height_width"
+                    android:layout_marginStart="@dimen/profil_detail_start_text"
+                    android:layout_marginTop="@dimen/detail_image_top"
+                    android:layout_marginBottom="90dp"
+                    app:layout_constraintBottom_toTopOf="@+id/voir_les_commentaire_btn"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/imageView5"
                     app:srcCompat="@drawable/boy" />
