--- a/CommunityMarket/app/src/main/res/layout/activity_test.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_test.xml
@@ -106,6 +106,8 @@
                     android:layout_height="@dimen/detail_image_height_width"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="@dimen/detail_image_top"
+                    android:layout_marginBottom="90dp"
+                    app:layout_constraintBottom_toTopOf="@+id/voir_les_commentaire_btn"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/imageView5"
                     app:srcCompat="@drawable/boy" />
