--- a/CommunityMarket/app/src/main/res/layout/activity_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".search.SearchActivity"
     android:id="@+id/layout"
-    android:background="@drawable/gradient_list">
+    >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarSearch"
@@ -21,16 +21,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/edit_text_background"
-        android:ems="10"
-        android:padding="@dimen/post_padding_edit_text"
+        android:layout_marginEnd="8dp"
         android:alpha="0.5"
+        android:ems="10"
         android:hint="@string/search_activity_text"
         android:inputType="textPersonName"
-        android:textColor="@color/blanc"
-        android:textColorHint="@color/blanc"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="@dimen/post_padding_edit_text"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarSearch" />
 
@@ -44,5 +43,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />
+
+    <ImageButton
+        android:id="@+id/search_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/background_message_button"
+        app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/search_edit_text"
+        app:srcCompat="@drawable/ic_search"
+        android:padding="10dp"
+        />
 
 </android.support.constraint.ConstraintLayout>
