correction des erreurs

--- a/CommunityMarket/app/src/main/res/values/preloaded_fonts.xml
+++ b/CommunityMarket/app/src/main/res/values/preloaded_fonts.xml
@@ -11,6 +11,7 @@
         <item>@font/caveat</item>
         <item>@font/condiment</item>
         <item>@font/fugaz_one</item>
+        <item>@font/nunito_bold</item>
         <item>@font/pacifico</item>
         <item>@font/playball</item>
         <item>@font/racing_sans_one</item>
