--- a/CommunityMarket/app/src/main/res/layout/activity_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_search.xml
@@ -8,19 +8,12 @@
     android:id="@+id/layout"
     >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbarSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/blanc"
-        app:titleTextColor="@color/black"></android.support.v7.widget.Toolbar>
-
     <EditText
         android:id="@+id/search_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:alpha="0.5"
         android:ems="10"
@@ -29,9 +22,10 @@
         android:padding="@dimen/post_padding_edit_text"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:theme="@style/progress_theme"
         app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarSearch" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/search_recyclerview"
@@ -54,7 +48,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/search_edit_text"
         app:srcCompat="@drawable/ic_search"
-        android:padding="10dp"
+        android:padding="8dp"
         />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/nunito_bold"
+        android:text="What do you want ? "
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
