--- a/CommunityMarket/app/src/main/res/values/styles.xml
+++ b/CommunityMarket/app/src/main/res/values/styles.xml
@@ -19,20 +19,21 @@
     </style>
 
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:fontFamily">@font/pacifico</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
     </style>
     <style name="ToolbarTheme_two" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:fontFamily">@font/pacifico</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_arrow_black</item>
     </style>
     <style name="ToolbarThemeTwo" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:fontFamily">@font/pacifico</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="colorPrimary">@color/blanc</item>
     </style>
     <style name="progress_theme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="colorAccent">@color/black</item>
     </style>
 </resources>
