--- a/CommunityMarket/app/src/main/res/layout/activity_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_search.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".search.SearchActivity"
     android:id="@+id/layout"
+    android:background="@color/black"
     >
 
     <EditText
@@ -16,13 +17,13 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:alpha="0.5"
+        android:theme="@style/ToolbarThemeTwo"
         android:ems="10"
         android:hint="search ... "
         android:inputType="textPersonName"
         android:padding="@dimen/post_padding_edit_text"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:theme="@style/progress_theme"
+        android:textColor="@color/blanc"
+        android:textColorHint="@color/blanc"
         app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -61,6 +62,7 @@
         android:fontFamily="@font/nunito_bold"
         android:text="What do you want ? "
         android:textSize="30sp"
+        android:textColor="@color/blanc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +77,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:theme="@style/ToolbarTheme_two"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
