--- a/CommunityMarket/app/src/main/res/layout/activity_test.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_test.xml
@@ -76,13 +76,16 @@
 
                 <TextView
                     android:id="@+id/detail_prix_produit"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="8dp"
+                    android:background="@drawable/gradient_list"
                     android:fontFamily="@font/bangers"
+                    android:padding="1dp"
                     android:text="1000 fcfa "
-                    android:textColor="@color/bg_screen1"
+                    android:textAlignment="center"
+                    android:textColor="@color/blanc"
                     android:textSize="@dimen/detail_text_size_two"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -101,6 +104,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit" />
 
                 <ImageView
+                    android:background="@drawable/gradient_list"
                     android:id="@+id/detail_image_du_profil"
                     android:layout_width="@dimen/detail_image_height_width"
                     android:layout_height="@dimen/detail_image_height_width"
