--- a/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_post_layout_vendeur.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:fontFamily="sans-serif-condensed"
+                android:fontFamily="@font/nunito_bold"
                 android:text="yannick houdini"
                 android:textColor="@color/black"
                 android:textSize="@dimen/item_principal_name"
@@ -61,6 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="17 mai 2019"
                 android:textSize="@dimen/item_principal_date"
                 app:layout_constraintStart_toEndOf="@+id/profil_vendeur"
@@ -74,6 +75,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
                 android:ellipsize="end"
+                android:fontFamily="@font/nunito_bold"
                 android:lines="3"
                 android:text="kdflekfief jnrkg "
                 android:textColor="@color/black"
