--- a/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
@@ -9,6 +9,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/nunito_bold"
         android:theme="@style/AppTheme.AppBarOverlay_two">
 
         <android.support.v7.widget.Toolbar
@@ -16,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/black"
+            android:fontFamily="@font/nunito_bold"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             >
 
@@ -27,6 +29,7 @@
             android:layout_height="match_parent"
             app:tabGravity="fill"
             android:elevation="8dp"
+            android:fontFamily="@font/nunito_bold"
             app:tabIndicatorColor="@color/blanc"
             android:background="@color/black"
             app:tabMode="scrollable">
