--- a/CommunityMarket/app/src/main/res/layout/fragment_home.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_home.xml
@@ -137,7 +137,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="sans-serif-condensed"
+                    android:fontFamily="@font/nunito_bold"
                     android:text="@string/actu"
                     android:textColor="@color/blanc"
                     android:textSize="20sp"
@@ -169,7 +169,7 @@
                     android:textColor="@color/blanc"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    app:fontFamily="sans-serif-condensed"
+                    app:fontFamily="@font/nunito_bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.031"
                     app:layout_constraintStart_toStartOf="parent"
