--- a/CommunityMarket/app/src/main/res/layout/item_contact_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_contact_chat.xml
@@ -61,7 +61,7 @@
                 android:textColor="@color/blanc"
                 android:textSize="@dimen/commentaire_name_user"
                 android:textStyle="bold"
-                android:theme="@style/ToolbarTheme"
+                android:fontFamily="@font/nunito_bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.004"
                 app:layout_constraintStart_toEndOf="@+id/chat_message_image_profil"
@@ -75,6 +75,7 @@
                 android:layout_marginEnd="@dimen/commentaire_text_end"
                 android:layout_marginBottom="@dimen/commentaire_text_bottom"
                 android:ellipsize="end"
+                android:fontFamily="@font/nunito_bold"
                 android:textColor="@color/blanc"
                 android:textSize="@dimen/commentaire_text"
                 android:text="s'il te plait viens jaimerais te voir"
@@ -103,6 +104,7 @@
                 android:id="@+id/chat_temps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/nunito_bold"
                 android:layout_marginEnd="@dimen/commentaire_text_temps_end"
                 android:text="17 mai 2019"
                 android:textColor="@color/blanc"
