--- a/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_layout_principal.xml
@@ -49,7 +49,7 @@
                     android:layout_marginStart="@dimen/principal_start"
                     android:layout_marginTop="@dimen/principal_top"
                     android:layout_marginEnd="8dp"
-                    android:fontFamily="sans-serif-condensed"
+                    android:fontFamily="@font/nunito_bold"
                     android:textColor="@color/black"
                     android:textSize="@dimen/item_principal_name"
                     android:textStyle="bold"
@@ -78,6 +78,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="12dp"
                     android:ellipsize="end"
+                    android:fontFamily="@font/nunito_bold"
                     android:lines="3"
                     android:textColor="@color/black"
                     android:textSize="@dimen/item_principal_desc"
