--- a/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_nouveautes.xml
@@ -46,7 +46,7 @@
                     android:lines="3"
                     android:textColor="@color/black"
                     android:textSize="@dimen/nvx_item_nvx_desc"
-                    app:fontFamily="sans-serif-condensed"
+                    app:fontFamily="@font/nunito_bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.51"
                     app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
                     android:textSize="@dimen/nvx_item_nvx_name"
                     android:textStyle="bold"
                     android:theme="@style/ToolbarTheme"
-                    app:fontFamily="sans-serif-condensed"
+                    app:fontFamily="@font/nunito_bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.351"
