--- a/CommunityMarket/app/src/main/res/layout/item_post_categorie.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_post_categorie.xml
@@ -52,7 +52,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="sans-serif-condensed"
+                android:fontFamily="@font/nunito_bold"
                 android:text="@string/nom_de_categorie"
                 android:textColor="@color/blanc"
                 android:textSize="24sp"
