--- a/CommunityMarket/app/src/main/res/layout/nav_header_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/nav_header_accueil.xml
@@ -32,17 +32,17 @@
           app:layout_constraintTop_toTopOf="parent" />
 
       <TextView
-          android:theme="@style/ToolbarTheme"
           android:id="@+id/drawer_user_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="8dp"
-          android:fontFamily="@font/caveat"
+          android:fontFamily="@font/nunito_bold"
           android:textColor="@color/blanc"
           android:textSize="19sp"
           android:textStyle="bold"
+          android:theme="@style/ToolbarTheme"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.502"
