--- a/CommunityMarket/app/src/main/res/layout/right_item_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/right_item_chat.xml
@@ -30,6 +30,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/background_dipay_message_right"
+            android:fontFamily="@font/nunito_bold"
             android:maxWidth="250dp"
             android:padding="8dp"
             android:text="Hello"
