--- a/CommunityMarket/app/src/main/res/layout/welcome_side2.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side2.xml
@@ -32,17 +32,17 @@
         tools:ignore="Orientation"></LinearLayout>
 
     <TextView
-        android:theme="@style/ToolbarTheme"
         android:id="@+id/textView5"
         android:layout_width="@dimen/desc_widh"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/a_propos_margin_top"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/nunito_bold"
         android:text="@string/titre_slider2"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="@dimen/slide_title"
         android:textStyle="bold"
+        android:theme="@style/ToolbarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +51,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/nunito_bold"
         android:paddingLeft="@dimen/desc_padding"
         android:paddingRight="@dimen/desc_padding"
         android:text="@string/slider_description_slider2"
